<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/tab_home" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_category_other"
        android:title="@string/tab_calendar" />
    <item
        android:id="@+id/nav_stats"
        android:icon="@drawable/ic_stats"
        android:title="@string/tab_stats" />
    <item
        android:id="@+id/nav_assets"
        android:icon="@drawable/ic_assets"
        android:title="@string/tab_assets" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/tab_settings" />
</menu> 